--- a/index.qmd
+++ b/index.qmd
@@ -2,20 +2,20 @@
 about:
   template: jolla
   id: about-block
-  image: "img/my_image.jpg"
+  image: "img/misja.jpg"
   links:
     - icon: twitter
       text: Twitter
       href: https://twitter.com/MarvinSchmittML
     - icon: github
       text: Github
-      href: https://github.com/marvinschmitt
+      href: https://github.com/misjamikkersutwente
     - icon: linkedin
       text: LinkedIn
-      href: https://www.linkedin.com/in/marvin-schmitt-a85b321a2/
+      href: https://www.linkedin.com/in/misja-m-413b924/
     - icon: envelope
       text: Email
-      href: "mailto:mail.marvinschmitt@gmail.com"  
+      href: "mailto:m.c.mikkers@utwente.nl"  
 ---
 
 ::: {#about-block}
@@ -32,9 +32,4 @@ Not only am I a scholar, but I am also a mentor and teacher. Over the centuries,
 On this website, you will find a selection of my published works, including scholarly articles, monographs, and translations. You will also find news and updates on my current research projects, as well as information on upcoming events and conferences where I will be speaking. I invite you to explore my website and learn more about my life's work as one of Middle-earth's greatest scholars and thinkers.
 Please feel free to [contact me](mailto:mail.marvinschmitt@gmail.com) if you have any questions or would like to discuss potential projects.
 
-```{=html}
-<div  style="margin: 30px; text-align: center;">
-<a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">View the tutorial for this template (+ download link)</a>
-</div>
-```
 
