--- a/index.qmd
+++ b/index.qmd
@@ -4,9 +4,9 @@ about:
   id: about-block
   image: "img/misja.jpg"
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com/MarvinSchmittML
+    - icon: mastodon
+      text: Mastodon
+      href: https://mastodon.social/@mcmikkers
     - icon: github
       text: Github
       href: https://github.com/misjamikkersutwente
@@ -21,15 +21,8 @@ about:
 ::: {#about-block}
 :::
 
-# Welcome to my website!
+# Welcome to my website
 
-I am Gandalf the White, a renowned wizard and scholar of Middle-earth. Over the centuries, I have dedicated my life to studying the history, languages, and cultures of the peoples of Middle-earth. On this website, I offer a glimpse into my vast body of knowledge, ongoing research, and publications.
+I am a [professor of Health Systems Engineering](https://people.utwente.nl/m.c.mikkers) at [the section Health Technology & Services Research (HTSR)](https://www.utwente.nl/en/bms/htsr/) of [the faculty Behavioural, Management and Social Sciences (BMS)](https://www.utwente.nl/en/bms/) at[the University of Twente](https://www.utwente.nl/en/).
 
-My research interests span the entirety of Middle-earth, from the distant past to the present day. I am particularly passionate about the languages and mythologies of the Elves, Dwarves, and Men, and I have made significant contributions to the understanding of these subjects. My studies of the natural world have also been extensive, and I am an expert in the flora and fauna of Middle-earth. Additionally, I have been involved in many important historical events and offer valuable first-hand accounts and insights on the past.
-
-Not only am I a scholar, but I am also a mentor and teacher. Over the centuries, I have had the honor of working with many young wizards, passing on my knowledge and experience to the next generation. I have a particular interest in the education of hobbits, whom I see as having great potential despite their small size and simple lifestyle. My teaching style is engaging and accessible, and I encourage my students to think critically and creatively.
-
-On this website, you will find a selection of my published works, including scholarly articles, monographs, and translations. You will also find news and updates on my current research projects, as well as information on upcoming events and conferences where I will be speaking. I invite you to explore my website and learn more about my life's work as one of Middle-earth's greatest scholars and thinkers.
-Please feel free to [contact me](mailto:mail.marvinschmitt@gmail.com) if you have any questions or would like to discuss potential projects.
-
-
+Please feel free to [contact me](mailto:m.c.mikkers@utwente.nl) if you have any questions or would like to discuss potential projects.
